[package]
name = "wasm-lz-string"
version = "0.1.1"
authors = ["chantzekin <z.chantzekin@gmail.com>"]
description = "A WebAssembly implementation of lz-string decompression"
license = "MIT"
repository = "https://github.com/chantzekin/wasm-lz-string"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.33"
wasm-bindgen = "0.2.63"
lz-string = "0.1.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
